crates/oac/src/snapshots/oac__tokenizer__tests__tokenizer_tests__comment.oa.snap
---
source: crates/oac/src/tokenizer.rs
expression: result
snapshot_kind: text
---
{
  "Ok": {
    "tokens": [
      {
        "Comment": " Hello, world!"
      },
      "Newline"
    ],
    "spans": [
      {
        "start": {
          "absolute_i": 1,
          "line": 1,
          "column": 1
        },
        "end": {
          "absolute_i": 16,
          "line": 1,
          "column": 16
        }
      },
      {
        "start": {
          "absolute_i": 17,
          "line": 1,
          "column": 17
        },
        "end": {
          "absolute_i": 17,
          "line": 1,
          "column": 17
        }
      }
    ]
  }
}
