crates/oac/src/snapshots/oac__tokenizer__tests__tokenizer_tests__float_literals.oa.snap
---
source: crates/oac/src/tokenizer.rs
expression: result
snapshot_kind: text
---
{
  "Ok": {
    "tokens": [
      {
        "Word": "fun"
      },
      {
        "Word": "main"
      },
      {
        "Parenthesis": {
          "opening": "(",
          "is_opening": true
        }
      },
      {
        "Parenthesis": {
          "opening": ")",
          "is_opening": false
        }
      },
      {
        "Symbols": "->"
      },
      {
        "Word": "I32"
      },
      {
        "Parenthesis": {
          "opening": "{",
          "is_opening": true
        }
      },
      "Newline",
      {
        "Word": "a"
      },
      {
        "Symbols": "="
      },
      {
        "Float": "1.25"
      },
      "Newline",
      {
        "Word": "b"
      },
      {
        "Symbols": "="
      },
      {
        "Float": "2.5"
      },
      {
        "Word": "f64"
      },
      "Newline",
      {
        "Word": "return"
      },
      {
        "Number": 0
      },
      "Newline",
      {
        "Parenthesis": {
          "opening": "}",
          "is_opening": false
        }
      },
      "Newline"
    ],
    "spans": [
      {
        "start": {
          "absolute_i": 1,
          "line": 1,
          "column": 1
        },
        "end": {
          "absolute_i": 3,
          "line": 1,
          "column": 3
        }
      },
      {
        "start": {
          "absolute_i": 5,
          "line": 1,
          "column": 5
        },
        "end": {
          "absolute_i": 8,
          "line": 1,
          "column": 8
        }
      },
      {
        "start": {
          "absolute_i": 9,
          "line": 1,
          "column": 9
        },
        "end": {
          "absolute_i": 9,
          "line": 1,
          "column": 9
        }
      },
      {
        "start": {
          "absolute_i": 10,
          "line": 1,
          "column": 10
        },
        "end": {
          "absolute_i": 10,
          "line": 1,
          "column": 10
        }
      },
      {
        "start": {
          "absolute_i": 12,
          "line": 1,
          "column": 12
        },
        "end": {
          "absolute_i": 13,
          "line": 1,
          "column": 13
        }
      },
      {
        "start": {
          "absolute_i": 15,
          "line": 1,
          "column": 15
        },
        "end": {
          "absolute_i": 17,
          "line": 1,
          "column": 17
        }
      },
      {
        "start": {
          "absolute_i": 19,
          "line": 1,
          "column": 19
        },
        "end": {
          "absolute_i": 19,
          "line": 1,
          "column": 19
        }
      },
      {
        "start": {
          "absolute_i": 20,
          "line": 1,
          "column": 20
        },
        "end": {
          "absolute_i": 20,
          "line": 1,
          "column": 20
        }
      },
      {
        "start": {
          "absolute_i": 22,
          "line": 2,
          "column": 2
        },
        "end": {
          "absolute_i": 22,
          "line": 2,
          "column": 2
        }
      },
      {
        "start": {
          "absolute_i": 24,
          "line": 2,
          "column": 4
        },
        "end": {
          "absolute_i": 24,
          "line": 2,
          "column": 4
        }
      },
      {
        "start": {
          "absolute_i": 26,
          "line": 2,
          "column": 6
        },
        "end": {
          "absolute_i": 29,
          "line": 2,
          "column": 9
        }
      },
      {
        "start": {
          "absolute_i": 30,
          "line": 2,
          "column": 10
        },
        "end": {
          "absolute_i": 30,
          "line": 2,
          "column": 10
        }
      },
      {
        "start": {
          "absolute_i": 32,
          "line": 3,
          "column": 2
        },
        "end": {
          "absolute_i": 32,
          "line": 3,
          "column": 2
        }
      },
      {
        "start": {
          "absolute_i": 34,
          "line": 3,
          "column": 4
        },
        "end": {
          "absolute_i": 34,
          "line": 3,
          "column": 4
        }
      },
      {
        "start": {
          "absolute_i": 36,
          "line": 3,
          "column": 6
        },
        "end": {
          "absolute_i": 38,
          "line": 3,
          "column": 8
        }
      },
      {
        "start": {
          "absolute_i": 39,
          "line": 3,
          "column": 9
        },
        "end": {
          "absolute_i": 41,
          "line": 3,
          "column": 11
        }
      },
      {
        "start": {
          "absolute_i": 42,
          "line": 3,
          "column": 12
        },
        "end": {
          "absolute_i": 42,
          "line": 3,
          "column": 12
        }
      },
      {
        "start": {
          "absolute_i": 44,
          "line": 4,
          "column": 2
        },
        "end": {
          "absolute_i": 49,
          "line": 4,
          "column": 7
        }
      },
      {
        "start": {
          "absolute_i": 51,
          "line": 4,
          "column": 9
        },
        "end": {
          "absolute_i": 51,
          "line": 4,
          "column": 9
        }
      },
      {
        "start": {
          "absolute_i": 52,
          "line": 4,
          "column": 10
        },
        "end": {
          "absolute_i": 52,
          "line": 4,
          "column": 10
        }
      },
      {
        "start": {
          "absolute_i": 53,
          "line": 5,
          "column": 1
        },
        "end": {
          "absolute_i": 53,
          "line": 5,
          "column": 1
        }
      },
      {
        "start": {
          "absolute_i": 54,
          "line": 5,
          "column": 2
        },
        "end": {
          "absolute_i": 54,
          "line": 5,
          "column": 2
        }
      }
    ]
  }
}
